2012-12-06  James Hunt  <james.hunt@ubuntu.com>

	* TODO: Updated with a couple of ideas.
	* man/procenv.1: Formatting of "SEE ALSO" section.

	[ Dave Love <fx@gnu.org> ]
	* src/procenv.c:
	  - locale_map:
	    - Guard non-POSIX locale categories for portability.
	    - Remove LC_ALL.
	  - show_locale(): Special-case handling for LC_ALL.

	[ Mike Miller <mtmiller@ieee.org> ]
	* src/procenv.c:
	  - show_linux_security_module_context(): Check that Apparmor
	    and SELinux are enabled before querying contexts
	    (LP: #1086768).

2012-12-02  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - locale_map: Add LC_ADDRESS, LC_IDENTIFICATION,
	    LC_MEASUREMENT, LC_NAME, LC_PAPER and LC_TELEPHONE
	    (LP: #1081628).
	  - show_env(): Sort environment variables (LP: #1081629).
	  - show_locale(): Added LANG and LANGUAGE for parity with
	    locale(1).
	* man/procenv.1:
	  - Add ref to locale(7).
	  - Add ref to locale(1).

2012-11-29  James Hunt  <james.hunt@ubuntu.com>

	* General tidy-up (removing unused variables, etc).

	[ Dave Love <fx@gnu.org> ]
	* Makefile.am: Add man page to man1_MANS for RHEL package build.
	* src/procenv.c:
	  - show_locale(): Load locale from the environment prior to
	    querying, and revert at end.
	  - show_linux_cpu(): Guard sched_getcpu().
	* src/procenv.h: show_capability(): Make NOP if PR_CAPBSET_READ
	  not available.
	* configure.ac: Add sched_getcpu to list of AC_CHECK_FUNCS.

2012-11-28  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1: Update for --threads and set date.
	* src/procenv.c: get_platform(): Correction for detecting ARMHF.

2012-11-28  James Hunt  <james.hunt@ubuntu.com>
	
	* src/procenv.c:
	  - get_thread_scheduler_name(): Make visible to non-Linux platforms.
	  - get_platform(): Fix for Hurd.
	  - show_clocks(): Fix for Hurd.
	* src/procenv.h:
	  - Fix to gross Hurd hack.
	  - Make visible to non-Linux platforms.
	  - show_clock_res(): Make resilient to failure.
	